	  the NuttX logo in the center of the display. This example can also be
	  built as an NSH "built-in" command.
	* apps/examples/usbstorage: Can now be built as two NSH "built-in" commands:
	  'msconn' will connect the USB mass storage device; 'msdis' will disconnect
	  the USB storage device.
	* apps/examples/nx*:  All NX header files moved from nuttx/include/nuttx to 
	  nuttx/include/nuttx/nx.
	* apps/examples/usbstorage: Added instrumentation to monitor memory usage
	  to check for memory leaks in the USB storage driver.
	* apps/examples/nxhello/nxhello_bkgd.c:  Fix handling of allocated glyph
	  memory.

6.8 2011-08-11 Gregory Nutt <spudmonkey@racsa.co.cr>

	* apps/examples/nxlines:  Added a test for NX line drawing capabilities.

6.9 2011-09-11 Gregory Nutt <spudmonkey@racsa.co.cr>

	* apps/examples/nxlines:  Extend the line drawing text to include drawing
	  of circles.
	* apps/system/i2c:  Add an I2C test tool that should help to bring up I2C
	  devices (when it is fully functional).
	* apps/nshlib/nsh_timcmds.c:  Add the date command that can be used to
	  show or set the time (only if CONFIG_RTC is set).

6.10 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* apps/system/i2c:  Add repitition and address auto-incrementing so that
	  and command can be executed numerous times.  Add a new verify command
	  that will write to a register, read from register, and verify that
	  returned value.
	* apps/graphics/tiff:  Add a library that can be used to create TIFF files.
	* apps/examples/tiff:  Add a unit test for the TIFF file creation logic
	* apps/examples/lcdrw:  Add a test to verify if you can or can or read
	  data from an LCD correctly.
	* apps/examples/usbterm:  A USB terminal example.. more of a USB chat or
	  serial bridge:  Data received on local console echoed via USB serial; 
	  data received on USB serial is echoed on the local console.
	* apps/examples/touchscreen:  Add a simple, generic test for any
	  touschscreen driver.